--- a/WebApps/XaUserUi/html/XaMyPage.html
+++ b/WebApps/XaUserUi/html/XaMyPage.html
@@ -28,5 +28,18 @@
             </ul>
         </div>
 
+         <div class="box BoxRbacRole">
+            <p class="title">User Roles</p>
+            <ul>
+                <li class="IconList">
+                     <a href="?obj=XaRbacRoleUi&evt=List"></a>
+                </li>
+                <li class="IconCreate">
+                    <a href="?obj=XaRbacRoleUi&evt=CreateFrm"></a>
+                </li>
+
+            </ul>
+        </div>
+
     </div>
 </div>
