--- a/shared/html/XaGuiList.html
+++ b/shared/html/XaGuiList.html
@@ -1,10 +1,10 @@
-<div id="ListContainer">
-
+<div id="ParentListContainer">
+    <div id="ListContainer">
 	<div id="DataContainer">
 		<script>
 			var Tpl=new XaListTpl(XaModel,XaData);
 			XaInnerHtmlWithScripts('DataContainer',Tpl.GetList());
 		</script>
 	</div>
-
+    </div>
 </div>
