--- a/WebApps/XaUserUi/html/XaMyPage.html
+++ b/WebApps/XaUserUi/html/XaMyPage.html
@@ -11,11 +11,10 @@
                 <li class="IconExplorer">
                     <a href="?obj=XaOuUi&evt=Explorer"></a>
                 </li>
-
             </ul>
         </div>
 
-         <div class="box BoxOuType">
+        <div class="box BoxOuType">
             <p class="title">Organizational Units Type</p>
             <ul>
                 <li class="IconList">
@@ -24,11 +23,34 @@
                 <li class="IconCreate">
                     <a href="?obj=XaOuTypeUi&evt=CreateFrm"></a>
                 </li>
-
             </ul>
         </div>
 
-         <div class="box BoxRbacRole">
+        <div class="box BoxUser">
+            <p class="title">Users &#160;</p>
+            <ul>
+                <li class="IconList">
+                     <a href="?obj=XaUserUi&evt=List"></a>
+                </li>
+                <li class="IconCreate">
+                    <a href="?obj=XaUserUi&evt=CreateFrm"></a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="box BoxUserType">
+            <p class="title">User Types</p>
+            <ul>
+                <li class="IconList">
+                     <a href="?obj=XaUserTypeUi&evt=List"></a>
+                </li>
+                <li class="IconCreate">
+                    <a href="?obj=XaUserTypeUi&evt=CreateFrm"></a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="box BoxRbacRole">
             <p class="title">User Roles</p>
             <ul>
                 <li class="IconList">
@@ -37,7 +59,6 @@
                 <li class="IconCreate">
                     <a href="?obj=XaRbacRoleUi&evt=CreateFrm"></a>
                 </li>
-
             </ul>
         </div>
 
