--- a/shared/html/XaUserCreateFrm.html
+++ b/shared/html/XaUserCreateFrm.html
@@ -9,13 +9,14 @@
 		function CopyUserId(source,target) {
 			document.getElementById(target).value=document.getElementById(source).value;
 		};
-
+		function ShowLi() {
+			document.getElementById('Li-XaRbacRoleRXaUser').style.visibility='visible';
+		}
 	</script>
 
+	<form class="form form-1-column" id="XaUser" name="XaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserUi&evt=Create','XaUser-CreateResponse','POST',false,0,'','XaUser','StringText','','','');ExtractUserId('XaUser-CreateResponse','XaUser-CreateResponse');ShowLi();">
 
-	<form class="form form-1-column" id="XaUser" name="XaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserUi&amp;evt=Create','XaUser-CreateResponse','POST',false,0,'','XaUser','StringText','','','');ExtractUserId('XaUser-CreateResponse','XaUser-CreateResponse');">
-
-		<input type="hidden" id="XaUser-CreateResponse"/>
+		<input type="text" id="XaUser-CreateResponse"/>
 	
 		<fieldset>
 			<legend>create a new user</legend>
@@ -43,28 +44,14 @@
 
 	</form>
 
-	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:CopyUserId('XaUser-CreateResponse','XaRbacRoleRXaUser-XaUser_ID');XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Create','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');">
+	<ul>
+	<li id="Li-XaRbacRoleRXaUser" style="visibility:hidden">
 
-		<input type="hidden" name="XaRbacRoleRXaUser-XaUser_ID" id="XaRbacRoleRXaUser-XaUser_ID"/>
-
-		<fieldset>
-			<legend>associate roles to user</legend>
-			<ul>
-				<li>
-					<label id="4-label" for="XaRbacRoleRXaUser-XaRbacRole_ID">Role</label>
-					<select id="XaRbacRoleRXaUser-XaRbacRole_ID" name="XaRbacRoleRXaUser-XaRbacRole_ID" type="select-single" placeholder="" required="required" autofocus="autofocus">
-					</select>
-					<script>XaCreateOptions('','obj=XaRbacRoleUi&evt=ListAsOptions','XaRbacRoleRXaUser-XaRbacRole_ID','');</script>
-				</li>
-			</ul>
-		</fieldset>
-		<fieldset>
-			<button type="reset">Reset</button>
-			<button type="submit">Save</button>
-		</fieldset>
-
-	</form>
+	</li>
+	</ul>
 
 </div>
 
-
+<script>
+	XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=CreateFrm&lay=include','Li-XaRbacRoleRXaUser','POST',true,0,'','','StringHtml','yes','','');
+</script>
