--- a/shared/html/XaUserCreateFrm.html
+++ b/shared/html/XaUserCreateFrm.html
@@ -1,15 +1,15 @@
 <div class="container">
 
 	<script>
-		function ExtractUserId(source,target) {
+		ExtractUserId=function(source,target) {
 			var UserId=document.getElementById(source).value;
 			UserId=UserId.substring(UserId.indexOf('<create>')+8,UserId.indexOf('</create>'));
 			document.getElementById(target).value=UserId;
 		};
-		function CopyUserId(source,target) {
+		CopyUserId=function(source,target) {
 			document.getElementById(target).value=document.getElementById(source).value;
 		};
-		function ShowLi() {
+		ShowLi=function() {
 			document.getElementById('Li-XaRbacRoleRXaUser').style.visibility='visible';
 		}
 	</script>
