--- a/shared/html/XaRbacRoleRXaUserUpdateFrm.html
+++ b/shared/html/XaRbacRoleRXaUserUpdateFrm.html
@@ -4,14 +4,12 @@
 	        var RowId =XaXmlGetElementValueByXpath(XmlDataDoc,"//read/id");
 	</script>
 
-	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:CopyUserId('XaUser-CreateResponse','XaRbacRoleRXaUser-XaUser_ID');XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Update','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=List&lay=include&XaUser_ID='+document.getElementById('XaUser-CreateResponse').value,'Li-XaRbacRoleRXaUser','POST',false,0,'','','StringHtml','yes','','');">
+	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Update','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=List&lay=include&XaUser_ID='+document.getElementById('XaUser-CreateResponse').value,'Li-XaRbacRoleRXaUser','POST',false,0,'','','StringHtml','yes','','');">
 
 		<input type="hidden" name="XaRbacRoleRXaUser-id" id ="XaRbacRoleRXaUser-id"/>
 		<script>
 			document.getElementById('XaRbacRoleRXaUser-id').value=RowId;
 		</script>
-
-		<input type="hidden" name="XaRbacRoleRXaUser-XaUser_ID" id="XaRbacRoleRXaUser-XaUser_ID"/>
 
 		<fieldset>
 			<legend>update associated roles to user</legend>
