--- a/shared/html/XaUserCreateFrm.html
+++ b/shared/html/XaUserCreateFrm.html
@@ -1,22 +1,16 @@
 <div class="container">
 
 	<script>
-		ExtractUserId=function(source,target) {
+		ExtractUserId=function(source) {
 			var UserId=document.getElementById(source).value;
 			UserId=UserId.substring(UserId.indexOf('<create>')+8,UserId.indexOf('</create>'));
-			document.getElementById(target).value=UserId;
+			return UserId;
 		};
-		CopyUserId=function(source,target) {
-			document.getElementById(target).value=document.getElementById(source).value;
-		};
-		ShowLi=function() {
-			document.getElementById('Li-XaRbacRoleRXaUser').style.visibility='visible';
-		}
 	</script>
 
-	<form class="form form-1-column" id="XaUser" name="XaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserUi&evt=Create','XaUser-CreateResponse','POST',false,0,'','XaUser','StringText','','','');ExtractUserId('XaUser-CreateResponse','XaUser-CreateResponse');ShowLi();">
+	<form class="form form-1-column" id="XaUser" name="XaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserUi&evt=Create','XaUser-CreateResponse','POST',false,0,'','XaUser','StringText','','','');XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=CreateFrm&lay=include&XaUser_ID='+ExtractUserId('XaUser-CreateResponse'),'Li-XaRbacRoleRXaUser','POST',true,0,'','','StringHtml','yes','','');">
 
-		<input type="text" id="XaUser-CreateResponse"/>
+		<input type="hidden" id="XaUser-CreateResponse"/>
 	
 		<fieldset>
 			<legend>create a new user</legend>
@@ -45,13 +39,7 @@
 	</form>
 
 	<ul>
-	<li id="Li-XaRbacRoleRXaUser" style="visibility:hidden">
-
-	</li>
+		<li id="Li-XaRbacRoleRXaUser"></li>
 	</ul>
 
 </div>
-
-<script>
-	XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=CreateFrm&lay=include','Li-XaRbacRoleRXaUser','POST',true,0,'','','StringHtml','yes','','');
-</script>
