--- a/shared/html/XaRbacRoleRXaUserCreateFrm.html
+++ b/shared/html/XaRbacRoleRXaUserCreateFrm.html
@@ -1,8 +1,10 @@
-	<!-- XaUser_ID has been passed as a Js variabile -->
+<!-- XaUser_ID has been passed as a Js variabile -->
 
-	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Create','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=List&lay=include&XaUser_ID='+XaUser_ID,'Li-XaRbacRoleRXaUser','POST',false,0,'','','StringHtml','yes','','');">
+<div id="CreateContainer">
 
-		<input type="text" name="XaRbacRoleRXaUser-XaUser_ID" id="XaRbacRoleRXaUser-XaUser_ID"/>
+	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Create','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');var target=document.getElementById('CreateContainer').parentNode.id;XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=List&lay=include&XaUser_ID='+XaUser_ID,target,'POST',false,0,'','','StringHtml','yes','','');">
+
+		<input type="hidden" name="XaRbacRoleRXaUser-XaUser_ID" id="XaRbacRoleRXaUser-XaUser_ID"/>
 		<script>
 			document.getElementById('XaRbacRoleRXaUser-XaUser_ID').value=XaUser_ID;
 		</script>
@@ -24,3 +26,5 @@
 		</fieldset>
 
 	</form>
+
+</div>
