--- a/shared/html/XaRbacRoleRXaUserUpdateFrm.html
+++ b/shared/html/XaRbacRoleRXaUserUpdateFrm.html
@@ -1,3 +1,5 @@
+<div id="UpdateContainer">
+
 	<script>
 		var XmlDataDoc=XaParseXml(XaData);
 		var XaRbacRole_ID_value=XaXmlGetElementValueByXpath(XmlDataDoc,"//read/XaRbacRole_ID");
@@ -5,7 +7,7 @@
 	        var RowId =XaXmlGetElementValueByXpath(XmlDataDoc,"//read/id");
 	</script>
 
-	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Update','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=List&lay=include&XaUser_ID='+XaUser_ID,'Li-XaRbacRoleRXaUser','POST',false,0,'','','StringHtml','yes','','');">
+	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Update','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');var target=document.getElementById('UpdateContainer').parentNode.id;XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=List&lay=include&XaUser_ID='+XaUser_ID,target,'POST',false,0,'','','StringHtml','yes','','');">
 
 		<input type="hidden" name="XaRbacRoleRXaUser-id" id ="XaRbacRoleRXaUser-id"/>
 		<script>
