--- a/shared/html/XaRbacRoleRXaUserCreateFrm.html
+++ b/shared/html/XaRbacRoleRXaUserCreateFrm.html
@@ -2,7 +2,7 @@
 
 <div id="CreateContainer">
 
-	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=Create','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');var target=document.getElementById('CreateContainer').parentNode.id;XaCallAction('','obj=XaRbacRoleRXaUserUi&amp;evt=List&lay=include&XaUser_ID='+XaUser_ID,target,'POST',false,0,'','','StringHtml','yes','','');">
+	<form class="form form-1-column" id="XaRbacRoleRXaUser" name="XaRbacRoleRXaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=Create','','POST',false,0,'','XaRbacRoleRXaUser','StringText','','yes','');var target=document.getElementById('CreateContainer').parentNode.id;XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=List&lay=include&XaUser_ID='+XaUser_ID,target,'POST',false,0,'','','StringHtml','yes','','');">
 
 		<input type="hidden" name="XaRbacRoleRXaUser-XaUser_ID" id="XaRbacRoleRXaUser-XaUser_ID"/>
 		<script>
