XaTpl.js : XaFormTpl, XaUpdateFormTpl : Type select-boolean

--- a/shared/html/XaUserAddressGeoCreateFrm.html
+++ b/shared/html/XaUserAddressGeoCreateFrm.html
@@ -1,7 +1,7 @@
 <div class="container">
     <script type="text/javascript" src="/js/XaGmapAutocomplete.js"></script>
 
-	<form class="form form-1-column" id="XaUserAddressGeo" name="XaUserAddressGeo" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserAddressGeoUi&amp;evt=Create','','POST',true,0,'','XaUserAddressGeo','StringText','','yes','');">
+	<form class="form form-1-column" id="XaUserAddressGeo" name="XaUserAddressGeo" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserAddressGeoUi&evt=Create','','POST',true,0,'','XaUserAddressGeo','StringText','','yes','');">
 	
 		<input id="latitude" name="XaUserAddressGeo-latitude" type="hidden">
 		<input id="longitude" name="XaUserAddressGeo-longitude" type="hidden">
