--- a/shared/html/XaUserAddressGeoUpdateFrm.html
+++ b/shared/html/XaUserAddressGeoUpdateFrm.html
@@ -24,7 +24,7 @@
 
 				function BuildAction(){
 
-					var Action="javascript:XaCallAction('','obj="+Obj+"&amp;evt="+Evt+"','','"+Method+"',"+Async+",0,'','"+Id+"','StringText','','yes','');";
+					var Action="javascript:XaCallAction('','obj="+Obj+"&evt="+Evt+"','','"+Method+"',"+Async+",0,'','"+Id+"','StringText','','yes','');";
 					return Action;
 				};
 
