User Add Mod forms made modular

--- a/WebApps/XaUserUi/html/XaMyPage.html
+++ b/WebApps/XaUserUi/html/XaMyPage.html
@@ -33,7 +33,7 @@
                      <a href="?obj=XaUserUi&evt=List"></a>
                 </li>
                 <li class="IconCreate">
-                    <a href="?obj=XaUserUi&evt=CreateFrm"></a>
+                    <a href="?obj=XaUserUi&evt=Add"></a>
                 </li>
             </ul>
         </div>
