--- a/shared/html/XaUserUpdateFrm.html
+++ b/shared/html/XaUserUpdateFrm.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
 
 	<script>
 		var XmlDataDoc=XaParseXml(XaData);
@@ -40,13 +40,5 @@
 		</fieldset>
 
 	</form>
-
-	<ul>
-		<li id="Li-XaRbacRoleRXaUser"></li>
-	</ul>
-
-	<script>
-		XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=List&lay=include&XaUser_ID='+UserId,'Li-XaRbacRoleRXaUser','POST',false,0,'','','StringHtml','yes','','');
-	</script>
 
 </div>
