User View page made modular

--- a/shared/html/XaGuiList.html
+++ b/shared/html/XaGuiList.html
@@ -1,9 +1,9 @@
 <div id="ParentListContainer">
     <div id="ListContainer">
-	<div id="DataContainer">
+	<div id="ListDataContainer">
 		<script>
 			var Tpl=new XaListTpl(XaModel,XaData);
-			XaInnerHtmlWithScripts('DataContainer',Tpl.GetList());
+			XaInnerHtmlWithScripts('ListDataContainer',Tpl.GetList());
 		</script>
 	</div>
     </div>
