--- a/shared/html/XaGuiRead.html
+++ b/shared/html/XaGuiRead.html
@@ -24,10 +24,10 @@
 	<br/>
 	<br/>
 
-	<div id="DataContainer">
+	<div id="ReadDataContainer">
 		<script>
 			var Tpl=new XaReadTpl(XaModel,XaData);
-			XaInnerHtmlWithScripts('DataContainer',Tpl.GetRead());
+			XaInnerHtmlWithScripts('ReadDataContainer',Tpl.GetRead());
 		</script>
 	</div>
 </div>
