--- a/shared/html/XaUserCreateFrm.html
+++ b/shared/html/XaUserCreateFrm.html
@@ -1,8 +1,8 @@
 <div>
 
-	<form class="form form-1-column" id="XaUser" name="XaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserUi&evt=Create','XaUser-CreateResponse','POST',false,0,'','XaUser','StringHtml','','','');">
+	<form class="form form-1-column" id="XaUser" name="XaUser" enctype="multipart/form-data" method="POST" action="javascript:XaCallAction('','obj=XaUserUi&evt=Create','XaUser-CreateResponse','POST',false,0,'','XaUser','StringText','','','');">
 
-		<div id="XaUser-CreateResponse" style="visibility:hidden;line-height:0px;"></div>
+		<input type="hidden" id="XaUser-CreateResponse"/>
 	
 		<fieldset>
 			<legend>create a new user</legend>
