--- a/shared/html/XaUserAdd.html
+++ b/shared/html/XaUserAdd.html
@@ -20,7 +20,7 @@
 	<div>
 		<ul>
 			<li id="LiTab-XaRbacRoleRXaUser">
-				<a href="javascript:if(document.getElementById('UserId').value!=''){XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=List&lay=include&XaUser_ID='+document.getElementById('UserId').value,'Li-XaRbacRoleRXaUser','POST',true,0,'','','StringHtml','yes','','');};">Roles</a>
+				<a onclick="javascript:if(document.getElementById('UserId').value!=''){XaCallAction('','obj=XaRbacRoleRXaUserUi&evt=List&lay=include&XaUser_ID='+document.getElementById('UserId').value,'Li-XaRbacRoleRXaUser','POST',true,0,'','','StringHtml','yes','','');};">Roles</a>
 			</li>
 		</ul>
 		<ul>
