--- a/shared/html/XaUserList.html
+++ b/shared/html/XaUserList.html
@@ -53,7 +53,7 @@
 
         var Content="<div class=\"form form-1-column\">";
 
-        var CreateFrmCallUrl="obj="+CallObj+"&evt=CreateFrm";
+        var CreateFrmCallUrl="obj="+CallObj+"&evt=Add";
         CreateFrmCallUrl+="&lay=include";
         CreateFrmAction="XaCallAction('','"+CreateFrmCallUrl+"','"+target+"','','','yes','"+target+"','','StringHtml','yes','','')";
 
