Improved List style

--- a/shared/html/XaRbacRoleRXaUserList.html
+++ b/shared/html/XaRbacRoleRXaUserList.html
@@ -26,10 +26,10 @@
         Content+="<table class=\"list\">";
 
 	var Title="Associated Roles";
-        Content+="<tr class=\"title\"><td colspan=\"100%\"><span>"+Title+"</span><ul class=\"RightToolbar\">";
+        Content+="<tr class=\"title\"><th colspan=\"100%\"><span>"+Title+"</span><ul class=\"RightToolbar\">";
         Content+="<li class=\"FunctionIcon Refresh\"></li><li class=\"FunctionIcon Expand\"></li>";
         Content+="<li class=\"FunctionIcon New\" onclick=\"javascript:"+CreateFrmAction+"\"></li>";
-        Content+="</ul></td></tr>";
+        Content+="</ul></th></tr>";
 
         if (DataRowNumber>0) {
 
