Php Front End App and improvements

--- a/shared/html/XaGuiHead.html
+++ b/shared/html/XaGuiHead.html
@@ -16,7 +16,7 @@
 <link rel="icon" type="image/png" href="a" />
 <link rel="shortcut icon" type="image/png" href="a" />
 
-<link rel="stylesheet" type="text/css" href="/default/style.css" />
+<link rel="stylesheet" type="text/css" href="/style/default/style.css" />
 
 <script type="text/javascript" src="/js/XaReady.js"></script>
 <script type="text/javascript" src="/js/XaLib.js"></script>
